# pipelines

pipelines/qwen2.5/: Dockerfile  main.py  pyproject.toml
