[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qwen2.5-vl-pipeline"
version = "1.0.0"
description = "Qwen2.5-VL vision-language model pipeline"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0", 
    "accelerate>=0.20.0",
    "qwen-vl-utils>=0.0.8",
    "Pillow>=9.0.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
flash-attention = [
    "flash-attn>=2.0.0",
]

[project.scripts]
qwen25-vl = "dev_script:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
